src/frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
    --primary-color: #222;
}

.inter-heading {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    color: var(--primary-color);
}

.inter-heading-2 {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    color: var(--primary-color);
}

.inter-body {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    color: var(--primary-color);
}

.text-gradient-primary {
    background: linear-gradient(to right, #0778E7, #222);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.text-gradient-secondary {
    background: linear-gradient(to right, #ee18ca, #222);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.text-gradient-oth {
    background: linear-gradient(to right, #ee4a18, #222);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.backdrop-layers {
    filter: drop-shadow(0 0 10px rgba(7, 120, 231, 0.5)) drop-shadow(0 0 20px rgba(7, 120, 231, 0.5)) drop-shadow(0 0 30px rgba(7, 120, 231, 0.5));
    background: white;
}

.backdrop-layers-light-1 {
    filter: drop-shadow(0 0 10px rgb(255, 175, 123));
}

.backdrop-layers-light-2 {
    filter: drop-shadow(0 0 10px rgb(115, 75, 109));
}

div[data-language="python"] span.code-keyword {
    color: #c50595;
    font-style: italic;
}

div[data-language="python"] span.code-variable {
    color: #088dca;
}

div[data-language="python"] span.code-definition {
    color: #caa608;
}

.indicator-icon {
    width: 1.25rem;
    height: 1.25rem;
    margin-inline: 0.2rem;

}

.indicator-icon::before {
    content: "";
    display: inline-block;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: #0778E7;
    box-shadow: 0 0 0 rgba(7, 120, 231, 0.5);
    animation: pulse-shadow 2s infinite;
    animation-delay: 0.5s;
}

.indicator-icon:hover {
    animation: none;
}

.timeline-bullet {
    width: 1rem;
    height: 1rem;
    display: block;
    border-radius: 50%;
    background-color: #ccc;
    box-shadow: 0 0 0 rgba(7, 120, 231, 0.5);
}

.timeline-bullet.timeline-bullet-active {
    background-color: #0778E7;
    animation: pulse-shadow 2s infinite;
    animation-delay: 0.5s;
}


@-webkit-keyframes pulse-shadow {
    0% {
        -webkit-box-shadow: 0 0 0 0 rgba(7, 120, 231, 0.4);
    }

    70% {
        -webkit-box-shadow: 0 0 0 10px rgba(7, 120, 231, 0);
    }

    100% {
        -webkit-box-shadow: 0 0 0 0 rgba(7, 120, 231, 0);
    }
}

@keyframes pulse-shadow {
    0% {
        -moz-box-shadow: 0 0 0 0 rgba(7, 120, 231, 0.4);
        box-shadow: 0 0 0 0 rgba(7, 120, 231, 0.4);
    }

    70% {
        -moz-box-shadow: 0 0 0 10px rgba(7, 120, 231, 0);
        box-shadow: 0 0 0 10px rgba(7, 120, 231, 0);
    }

    100% {
        -moz-box-shadow: 0 0 0 0 rgba(7, 120, 231, 0);
        box-shadow: 0 0 0 0 rgba(7, 120, 231, 0);
    }
}

